Process operations that return array type as list functions in the Pulumi schema. Regenerate the schema and the SDKs. Schema is not yet correct
